--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@ybd-project/ytdl-core": "latest",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express": "^4.19.2"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
